feat: Tags e conteúdo básico do arquivo index.html.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,35 @@
     <script src="./index.js" defer></script>
 </head>
 <body>
+    <header>
+        <h1>Lanchonete <img src="./assets/icons/heart.svg" alt="Coração"></h1>
+        <img class="purchase" id="purchase" src="./assets/icons/purchase.svg" alt="Compras">
+    </header>
     
+    <main>
+        <h1>Cardápio</h1>
+        <p>Adicione itens ao carrinho</p>
+        <section class="carousel">
+            <div class="pagination-dots" id="pagination-dots">
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
+        </section>
+        <section class="menu">
+            <img src="" alt="">
+        </section>
+    </main>
+    <div id="contact-us">
+        <a target="_blank" href="https://wa.me//5581987083118?text=testando%20mensagem:%20aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"><img src="./assets/icons/whatsapp.svg" alt="whatsapp"></a>
+    </div>
+    <footer>
+        <address>
+            <p>Rua sabiá das laranjeiras, 198.</p>
+        </address>
+        <p>Desenvolvido por Carlos Gabriel</p>
+    </footer>
 </body>
 </html>
